--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-    "name": "featurize-dev.io",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "watch": "tailwindcss -i ./input.css -o ./css/site.css --watch"
-    }
+  "name": "play-tailwind",
+  "version": "1.0.0",
+  "description": "",
+  "main": "tailwind.config.js",
+  "scripts": {
+    "build-css": "tailwindcss -i ./src/tailwind.css -o ./assets/css/tailwind.css -w"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/uideck/play-tailwind.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.9",
+    "tailwindcss": "^3.0.15"
+  }
 }
